# pyramid_tutorial

./: .flake8  .pre-commit-config.yaml  alembic.ini  development.ini  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 17de29a15aa0_products_add_status_field.py  4fb207f28a50_init.py  68fd71eb7ed1_products_status_field_default.py
pyramid_tutorial/: app.py  documents.py  forms.py  init_db.py  init_es.py  models.py  views.py
pyramid_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyramid_tutorial/templates/: _formhelpers.jinja2  base.jinja2  product_edit.jinja2  products.jinja2
src/: app.py
tests/: test_forms.py
