[tool.poetry]
name = "pyramid-tutorial"
version = "0.1.0"
description = ""
authors = ["Pyramid Tutorial"]

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^1.10.4"
pyramid_debugtoolbar = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
waitress = "^1.4.3"

[tool.poetry.plugins."paste.app_factory"]
main = "pyramid_tutorial.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
